@@ -1,6 +1,5 @@
 In progress:
 
-* get pre-processors from file at mandb time and store in the db.
 * store .so link in the db.
 * reduce wasted/duplicated text stored within the databases.
   10-20% database size reduction so far.
